--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.48.1",
+    "@playwright/test": "^1.48.2",
     "@types/node": "^22.7.9"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
